--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.12.2",
+    "lucide-react": "^0.545.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-scripts": "5.0.1",
@@ -18,6 +19,16 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "start:3001": "set PORT=3001 && react-scripts start",
+    "start:3002": "set PORT=3002 && react-scripts start",
+    "start:3003": "set PORT=3003 && react-scripts start",
+    "start:3004": "set PORT=3004 && react-scripts start",
+    "start:3005": "set PORT=3005 && react-scripts start",
+    "start:3006": "set PORT=3006 && react-scripts start",
+    "start:3007": "set PORT=3007 && react-scripts start",
+    "start:3008": "set PORT=3008 && react-scripts start",
+    "start:3009": "set PORT=3009 && react-scripts start",
+    "start:3010": "set PORT=3010 && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
